--- a/.github/workflows/bridge-publish.yml
+++ b/.github/workflows/bridge-publish.yml
@@ -6,8 +6,8 @@ on:
       - master
       - develop
     paths:
-      - '../workflows/publish-bridge.yml'
-      - '../..'
+      - '.github/workflows/bridge-publish.yml'
+      - 'package.json'
   workflow_dispatch:
 
 jobs:
