--- a/.github/workflows/bridge-binaries.yml
+++ b/.github/workflows/bridge-binaries.yml
@@ -43,7 +43,7 @@ jobs:
         run: bun install
 
       - name: Build bridge binary
-        run: bun -F @supervise-dev/bridge run build:bridge:${{ matrix.target }}
+        run: bun run build:bridge:${{ matrix.target }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
