--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "version": "0.1.3",
   "description": "A tRPC-based bridge for filesystem and process operations with both library and server components",
   "scripts": {
-    "build": "pnpm run build:client && pnpm run build:bridge",
-    "build:client": "tsc && bun build src/client.ts --outdir ./dist --target node --sourcemap=external",
-    "build:bridge": "bun build src/index.ts --compile --outfile ./dist/bridge --target bun",
-    "build:bridge:linux-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-x64 --target bun",
-    "build:bridge:linux-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-arm64 --target bun",
-    "build:bridge:darwin-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-x64 --target bun",
-    "build:bridge:darwin-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-arm64 --target bun",
-    "dev:server": "bun run src/index.ts --watch",
-    "postinstall": "pnpm run build:bridge",
     "bridge": "bun run dist/bridge",
-    "typecheck": "tsc --noEmit",
+    "build": "pnpm run build:client && pnpm run build:bridge",
+    "build:bridge": "bun build src/index.ts --compile --outfile ./dist/bridge --target bun",
+    "build:bridge:darwin-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-arm64 --target bun",
+    "build:bridge:darwin-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-x64 --target bun",
+    "build:bridge:linux-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-arm64 --target bun",
+    "build:bridge:linux-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-x64 --target bun",
+    "build:client": "tsc && bun build src/client.ts --outdir ./dist --target node --sourcemap=external",
+    "dev:server": "bun run src/index.ts --watch",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint src",
-    "format": "prettier --write \"src/**/*.ts\""
+    "postinstall": "pnpm run build:bridge",
+    "typecheck": "tsc --noEmit"
   },
   "bin": {
     "bridge": "dist/bridge"
