update corss compilation

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "bridge": "bun run dist/bridge",
     "build": "pnpm run build:client && pnpm run build:bridge",
     "build:bridge": "bun build src/index.ts --compile --outfile ./dist/bridge --target bun",
-    "build:bridge:darwin-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-arm64 --target bun",
-    "build:bridge:darwin-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-x64 --target bun",
-    "build:bridge:linux-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-arm64 --target bun",
-    "build:bridge:linux-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-x64 --target bun",
+    "build:bridge:darwin-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-arm64 --target bun-darwin-arm64",
+    "build:bridge:darwin-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-darwin-x64 --target bun-darwin-x64",
+    "build:bridge:linux-arm64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-arm64 --target bun-linux-arm64",
+    "build:bridge:linux-x64": "bun build src/index.ts --compile --outfile ./dist/bridge-linux-x64 --target bun-linux-x64",
     "build:client": "tsc && bun build src/client.ts --outdir ./dist --target node --sourcemap=external",
     "dev:server": "bun run src/index.ts --watch",
     "format": "prettier --write \"src/**/*.ts\"",
