--- a/.github/workflows/bridge-publish.yml
+++ b/.github/workflows/bridge-publish.yml
@@ -23,21 +23,26 @@ jobs:
       - name: Setup bun
         uses: oven-sh/setup-bun@v1
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          registry-url: 'https://npm.pkg.github.com'
+
       - name: Install dependencies
         run: bun install
 
       - name: Build bridge package (client library only)
         run: bun run build:client
 
-      - name: Configure npm registry
-        run: |
-          echo "@supervise-dev:registry=https://npm.pkg.github.com/" >> ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
-
       - name: Publish to GitHub Packages (Development)
         if: github.ref == 'refs/heads/develop'
-        run: bun publish --tag develop --no-git-checks
+        run: npm publish --tag develop
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to GitHub Packages (Production)
         if: github.ref == 'refs/heads/master'
-        run: bun publish --no-git-checks
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
