--- a/.github/workflows/bridge-binaries.yml
+++ b/.github/workflows/bridge-binaries.yml
@@ -7,7 +7,7 @@ on:
       - develop
     paths:
       - '.github/workflows/bridge-binaries.yml'
-      - 'src'
+      - 'src/**'
       - 'package.json'
   workflow_dispatch:
 
